kubernetes-project/argocd/cluster-ingress/alertmanager.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: alertmanager
spec:
  gateways:
  - cluster-gateway
  hosts:
  - 'alertmanager.shamrockoo4tune.ru'
  http:
  - route:
    - destination:
        host: alertmanager.mon.svc.cluster.local
        port:
          number: 9093
...
