kubernetes-project/argocd/cluster-ingress/argocd-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
spec:
  gateways:
  - cluster-gateway
  hosts:
  - 'argocd.shamrockoo4tune.ru'
  http:
  - route:
    - destination:
        host: argocd-server.argocd.svc.cluster.local
        port:
          number: 80
...
