kubernetes-project/argocd/cluster-ingress/grafana-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana
spec:
  gateways:
  - cluster-gateway
  hosts:
  - 'grafana.shamrockoo4tune.ru'
  http:
  - route:
    - destination:
        host: grafana.istio-system.svc.cluster.local
        port:
          number: 3000
...
