kubernetes-project/argocd/cluster-ingress/kiali-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali
spec:
  gateways:
  - cluster-gateway
  hosts:
  - 'kiali.shamrockoo4tune.ru'
  http:
  - route:
    - destination:
        host: kiali.istio-system.svc.cluster.local
        port:
          number: 20001
...
