kubernetes-project/argocd/cluster-ingress/kibana-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kibana
spec:
  gateways:
  - cluster-gateway
  hosts:
  - 'kibana.shamrockoo4tune.ru'
  http:
  - route:
    - destination:
        host: kibana-kibana.log.svc.cluster.local
        port:
          number: 5601
...
