kubernetes-project/argocd/cluster-ingress/prometheus-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  gateways:
  - cluster-gateway
  hosts:
  - 'prometheus.shamrockoo4tune.ru'
  http:
  - route:
    - destination:
        host: prometheus.istio-system.svc.cluster.local
        port:
          number: 9090
...
