kubernetes-project/argocd/cluster-ingress/shop-vs.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
spec:
  gateways:
  - cluster-gateway
  hosts:
  - 'shop.shamrockoo4tune.ru'
  http:
  - route:
    - destination:
        host: frontend.shop.svc.cluster.local
        port:
          number: 80
...
